--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -11,8 +11,7 @@
             </div>
             <h2><%= product.price %></h2>
             <p><%= product.description %></p>
-            <form action="/cart" method="post">
-                <button class="btn">Add To Cart</button>
-            </form>
+            <!-- the second arguement is used to pass on the product object to the actual ejs file that is being called here(add-to-cart) as add-to-cart uses the product object's member variables -->
+            <%- include('../includes/add-to-cart.ejs', {product: product}) %>
         </main>
         <%- include('../includes/end.ejs') %>
