--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -28,9 +28,9 @@
                                 <div class="card__actions">
                                     <a href="/admin/edit-product/<%= product.id %>?edit=true" class="btn">Edit</a>
                                     <form action="/admin/delete-product" method="POST">
+                                        <input hidden name="productId" value="<%= product.id %>">
                                         <button class="btn" type="submit">Delete</button>
                                     </form>
-
                                 </div>
                             </article>
                             <% } %>
