--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -5,5 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="https://cdn.pixabay.com/photo/2017/01/05/19/10/cart-1956097__340.png">
     <title><%= pageTitle %></title>
     <link rel="stylesheet" href="/css/main.css">
