--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -27,7 +27,7 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <a class='btn' href="/products/<%= product.id %>">Details</a>
+                                    <a class='btn' href="/products/<%= product._id %>">Details</a>
                                     <!-- the second arguement is used to pass on the product object to the actual ejs file that is being called here(add-to-cart) as add-to-cart uses the product object's member variables -->
                                     <%- include('../includes/add-to-cart.ejs', {product: product}) %>
                                 </div>
