--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -9,10 +9,10 @@
                 <ul class="cart__item-list">
                     <% products.forEach(p => { %>
                         <li class="cart__item">
-                            <h1><%= p.title %></h1>
+                            <h1><%= p.productId.title %></h1>
                             <h2>Quantity: <%= p.quantity %></h2>
                             <form action="/delete-cart-item" method="POST">
-                                <input hidden type="text" value="<%= p._id %>" name="productId">
+                                <input hidden type="text" value="<%= p.productId._id %>" name="productId">
                                 <button class="btn danger" type="submit">Delete</button>
                             </form>
                         </li>
