--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -24,7 +24,11 @@
                         <div class="card__actions">
                             <a class='btn' href="/products/<%= product._id %>">Details</a>
                             <!-- the second arguement is used to pass on the product object to the actual ejs file that is being called here(add-to-cart) as add-to-cart uses the product object's member variables -->
-                            <%- include('../includes/add-to-cart.ejs', {product: product}) %>
+                            <% if (isAuthenticated) { %>
+                                  <% if (isAuthenticated) { %>
+                                <%- include('../includes/add-to-cart.ejs', {product: product}) %>
+                            <% } %>
+                            <% } %>
                         </div>
                     </article>
                 <% } %>
