--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -29,6 +29,7 @@
             <% if (editing) { %>
                 <input type="hidden" value="<%= product._id %>" name="productId">
             <% } %>
+            <input type="text" hidden name="_csrf" value="<%= csrfToken %>">
             <button class="btn" type="submit"><% if (editing) { %>Update Product<% } else { %>Add Product<% } %></button>
         </form>
     </main>
