--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -29,14 +29,15 @@
                                     <a href="/admin/edit-product/<%= product._id %>?edit=true" class="btn">Edit</a>
                                     <form action="/admin/delete-product" method="POST">
                                         <input hidden name="productId" value="<%= product._id %>">
+                                        <input type="text" hidden name="_csrf" value="<%= csrfToken %>">
                                         <button class="btn" type="submit">Delete</button>
                                     </form>
                                 </div>
                             </article>
-                            <% } %>
+                        <% } %>
                     </div>
                     <% } else { %>
                         <h1>No Products Found!</h1>
-                        <% } %>
+                    <% } %>
             </main>
             <%- include('../includes/end.ejs') %>
