--- a/views/auth/new-password.ejs
+++ b/views/auth/new-password.ejs
@@ -12,13 +12,15 @@
                 <%= errorMessage %>
             </div>
         <% } %>
-        <form class="login-form" action="/reset" method="POST">
+        <form class="login-form" action="/new-password" method="POST">
             <div class="form-control">
-                <label for="Email">Email</label>
-                <input type="email" name="email" id="email">
+                <label for="Password">Password</label>
+                <input type="password" name="password" id="password">
             </div>
+            <input type="text" hidden name="userId" value="<%= userId %>">
+            <input type="text" hidden name="passwordToken" value="<%= passwordToken %>">
             <input type="text" hidden name="_csrf" value="<%= csrfToken %>">
-            <button class="btn" type="submit">Reset Password</button>
+            <button class="btn" type="submit">Update Password</button>
         </form>
     </main>
 <%- include('../includes/end.ejs') %></body>
