--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -15,11 +15,21 @@
         <form class="login-form" action="/login" method="POST">
             <div class="form-control">
                 <label for="Email">Email</label>
-                <input type="email" name="email" id="email">
+                <input
+                class="<%= validationErrors.find(e => e.param === 'password') ? 'invalid' : '' %>"
+                type="email"
+                name="email"
+                id="email"
+                value="<%= oldInput.email %>">
             </div>
             <div class="form-control">
                 <label for="Password">Password</label>
-                <input type="password" name="password" id="password">
+                <input
+                class="<%= validationErrors.find(e => e.param === 'password') ? 'invalid' : '' %>"
+                type="password"
+                name="password"
+                id="password"
+                value="<%= oldInput.password %>">
             </div>
             <input type="text" hidden name="_csrf" value="<%= csrfToken %>">
             <button class="btn" type="submit">Login</button>
