--- a/public/css/main.css
+++ b/public/css/main.css
@@ -232,6 +232,26 @@ form {
   color: white;
 }
 
+.pagination {
+  margin-top: 2rem;
+  text-align: center;
+}
+
+.pagination a {
+  text-decoration: none;
+  border: 1px solid #00695c;
+  color: #00695c;
+  padding: 0.5rem;
+  margin: 0 0.2rem;
+}
+
+.pagination a:hover,
+.pagination a:active,
+.pagination > .active {
+  background-color: #00695c;
+  color: white;
+}
+
 .user-message {
   margin: auto;
   width: 90%;
