--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -27,11 +27,13 @@
                                 </div>
                                 <div class="card__actions">
                                     <a href="/admin/edit-product/<%= product._id %>?edit=true" class="btn">Edit</a>
-                                    <form action="/admin/delete-product" method="POST">
+                                    <!--? For making asynchronous calls, we change the button's type to button so that we can add click event -->
+                                    <!-- <form action="/admin/delete-product" method="POST"> -->
                                         <input hidden name="productId" value="<%= product._id %>">
                                         <input type="text" hidden name="_csrf" value="<%= csrfToken %>">
-                                        <button class="btn" type="submit">Delete</button>
-                                    </form>
+                                        <!-- <button class="btn" type="submit">Delete</button> -->
+                                        <button class="btn" type="button" onclick="deleteProduct(this)">Delete</button>
+                                    <!-- </form> -->
                                 </div>
                             </article>
                         <% } %>
@@ -41,3 +43,4 @@
                     <% } %>
             </main>
             <%- include('../includes/end.ejs') %>
+            <script src="/js/admin.js"></script>
